--- a/index.html
+++ b/index.html
@@ -11,11 +11,7 @@
         <div id="title-box">
 
           <!-- Level 4 'PHARRELL WILLIAMS' Header -->
-          <p> PHARRELL WILLIAMS
-
-          HAPPY
-
-          | FROM DESPICABLE ME 2 | </p>
+          <p> Pharrel Williams </p>
           <!-- Level 2 'HAPPY' Header -->
 
           <!-- Level 4 '| FROM DESPICABLE ME...' Header -->
