--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div id="title-box">
 
           <!-- Level 4 'PHARRELL WILLIAMS' Header -->
-          <p> Pharrel Williams </p>
+          <h2> Pharrel Williams </h2>
           <!-- Level 2 'HAPPY' Header -->
 
           <!-- Level 4 '| FROM DESPICABLE ME...' Header -->
